--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -48,10 +48,16 @@ on fs
 
     wait /dev/block/bootdevice/by-name/persist
     mount ext4 /dev/block/bootdevice/by-name/persist /persist nosuid nodev barrier=1
+    mkdir /persist/data 0700  system system
+    restorecon_recursive /persist
 
     wait /dev/block/bootdevice/by-name/modem
     mount vfat /dev/block/bootdevice/by-name/modem /firmware ro shortname=lower,uid=1000,gid=1000,dmask=227,fmask=337
-    #write /sys/kernel/boot_adsp/boot 1
+
+    swapon_all fstab.qcom
+    write /proc/sys/vm/swappiness 100
+
+    setprop ro.crypto.fuse_sdcard true
 
 on post-fs-data
     mkdir /data/tombstones 0771 system system
@@ -59,6 +65,9 @@ on post-fs-data
     mkdir /tombstones/lpass 0771 system system
     mkdir /tombstones/wcnss 0771 system system
     mkdir /tombstones/dsps 0771 system system
+    mkdir /persist/data/sfs 0700 system system
+    mkdir /persist/data/tz 0700 system system
+    mkdir /data/misc/dts 0770 media audio
 
 #start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
