--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1169,3 +1169,6 @@ service test_diag /system/bin/test_diag
     user root
     disabled
     seclabel u:r:diag:s0
+
+service libqmi_oem_main /system/bin/libqmi_oem_main
+    class main
