--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -42,6 +42,7 @@ on enable-low-power
     write /sys/devices/system/cpu/cpu3/online 1
 
     rm /data/system/perfd/default_values
+    start perfd
 
 on charger
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
