--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -730,7 +730,7 @@ service qmuxd /system/bin/qmuxd
     group radio audio bluetooth gps qcom_diag
 
 service netmgrd /system/bin/netmgrd
-    class main
+    class core
 
 service ipacm-diag /system/bin/ipacm-diag
     class main
@@ -754,9 +754,8 @@ service sensors /system/bin/sensors.qcom
     group root
     disabled
 
-on property:ro.use_data_netmgrd=false
-    # netmgr not supported on specific target
-    stop netmgrd
+on property:ro.use_data_netmgrd=true
+    start netmgrd
 
 # Adjust socket buffer to enlarge TCP receive window for high bandwidth
 # but only if ro.data.large_tcp_window_size property is set.
