--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1078,4 +1078,5 @@ service test_diag /system/bin/test_diag
     user root
 
 service libqmi_oem_main /system/bin/libqmi_oem_main
-    class main
+    class core
+    user root
