--- a/prebuilts/audio_policy.conf
+++ b/prebuilts/audio_policy.conf
@@ -23,13 +23,13 @@ audio_hw_modules {
   primary {
     outputs {
       primary {
-        sampling_rates 44100|48000
+        sampling_rates 8000|11025|16000|22050|24000|32000|44100|48000
         channel_masks AUDIO_CHANNEL_OUT_STEREO
         formats AUDIO_FORMAT_PCM_16_BIT
         devices AUDIO_DEVICE_OUT_EARPIECE|AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_WIRED_HEADSET|AUDIO_DEVICE_OUT_WIRED_HEADPHONE|AUDIO_DEVICE_OUT_ALL_SCO|AUDIO_DEVICE_OUT_PROXY|AUDIO_DEVICE_OUT_AUX_DIGITAL|AUDIO_DEVICE_OUT_ANLG_DOCK_HEADSET|AUDIO_DEVICE_OUT_FM|AUDIO_DEVICE_OUT_FM_TX
-        flags AUDIO_OUTPUT_FLAG_PRIMARY
+        flags AUDIO_OUTPUT_FLAG_DEEP_BUFFER
       }
-      low_latency {
+      deep_buffer {
          sampling_rates 44100|48000
          channel_masks AUDIO_CHANNEL_OUT_STEREO
          formats AUDIO_FORMAT_PCM_16_BIT
