--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -39,11 +39,10 @@ on enable-low-power
     write /sys/devices/system/cpu/cpu2/online 1
     write /sys/devices/system/cpu/cpu3/online 1
 
-    rm /data/system/perfd/default_values
-    start perfd
-
 on property:sys.boot_completed=1
     setprop sys.io.scheduler bfq
+
+   start mpdecision
 
     # Set up KSM
     write /sys/kernel/mm/ksm/deferred_timer 1
