--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -693,8 +693,8 @@ service qmiproxy /system/bin/qmiproxy
 
 # QMUX must be in multiple groups to support external process connections
 service qmuxd /system/bin/qmuxd
-    class core
-    user radio
+    class main
+    user root
     group radio audio bluetooth gps qcom_diag
 
 service netmgrd /system/bin/netmgrd
